2010-03-29  Michael Bell <michael.bell@web.de>
  * Released 0.10.8
  * Removed OMA DM tests because the OMA did not grant a permission
    for the inclusion (ticket #36).
  * Added a fix for the broken vFormat handling in the SyncML
    specification. All LFs are replaced by CRLFs in every vFormat
    object inside a SyncML message (ticket #38).
  * Added Nokia ConML support (ticket #35).
    There is no public documentation available from Nokia. The
    transformation tables were created from sniffed WBXML documents.
    The patch was supplied by Anton D. Kachalov.

2009-05-12  Michael Bell <michael.bell@web.de>
  * Released 0.10.7
  * Fixed a Debian MIPS port build issue (ticket #34)
    If the operating system environment has a built-in getopt
    implementation then the cmake environment disables the internal
    implementation of libwbxml and uses the getopt function of the
    operating system. This avoids clashes with variables which are
    declared extern and explicit but already exists in the default
    POSIX header files (e.g. optopt).

2009-04-24  Michael Bell <michael.bell@web.de>
  * Released 0.10.6
  * Extended (updated) tables for Microsoft AirSync
    (The patch was supplied by Ossi Jormakka from Ixonos Plc.)
  * Expat splits &lt;html&gt; into three separate text nodes.
    Therefore it is necessary to scan for splitted text nodes
    and merge them into a single consistent text node. 
  * Normalize encoding with normalize_xml.pl 
  * Fixed bashisms in launchTest.sh
  * Fixed Sun Studio CC and GCC warnings.
  * Fixed Testing.cmake to not set GCC specific compiler and linker
    flags for other compilers.
  * Fixed race condition in WV datetime opaque encoding

2009-03-30  Michael Bell <michael.bell@web.de>
  * Released 0.10.5
  * Fixed library installation path for win32 (ticket #31)
    (The patch was supplied by Jeremy Laine.)

2009-03-09  Michael Bell <michael.bell@web.de>
  * Released 0.10.4